Fix issues with kpi inconsistency, empty graphics and spacing

--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -29,7 +29,7 @@
   }
   .titleGraph{
     font-weight: bold;
-    font-size: 28px;
+    font-size: 1.3rem;
     padding: 0px;
     margin: 10px;
   }
@@ -51,9 +51,10 @@
   
   .numKpi{
     font-weight: bold;
-    font-size: 24px;
+    font-size: 1.3rem;
   }
 
   .numDiv{
-    margin-top: -10px;
+    margin-top: 10px;
+    font-size: 1.3rem;
   }
